# paseporfavor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  settings.py
static/: styles.css
