[project]
name = "pass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cryptography>=46.0.3",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "reportlab>=4.2.5",
    "python-multipart>=0.0.20",
]
